# Code-Rabbit

./: .gitignore  CLAUDE.md  README.md
.do/: app.yaml
.github/workflows/: ci.yml
backend/: ai_context_2_20251006_190452.md  ai_context_2_20251008_164751.md  ai_context_3_20251008_181048.md  ai_context_3_20251008_224603.md  ai_context_5_20251008_231751.md  ai_context_5_20251009_140203.md  ai_context_8_20251009_100409.md  main.py  pyproject.toml
backend/.do/: app.yaml
backend/src/: .gitignore  test_ast.py
backend/src/agents/: aggregator.py  context_fetcher.py  db_query.py  graph.py  nodes.py  state.py
backend/src/ai/: code_reviewer.py  multi_agent_reviewer.py
backend/src/db/: embedding_raw_context.py  index.py  vector_indexer.py
backend/src/git_ops/: repo_manager.py
backend/src/services/: ast_parser.py  cfg_graph.py  code_graph.py  enhanced_context_builder.py  history_fetcher.py  pda_graph.py  semantic_graph_builder.py  semantics.py  simple_ast_parser.py  simple_context_builder.py  simple_semantics.py  vector_retriever.py
backend/src/utils/: ai_client.py  config.py  github_bot.py
backend/src/webhook/: github_webhook.py
frontend/: package.json
frontend/src/Effects/: BackgroundGradients.tsx
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: About.tsx  FAQ.tsx  Features.tsx  Footer.tsx  ImageSection.tsx  NavBar.tsx
