[project]
name = "coderabbit-clone"
version = "0.1.0"
description = "AI-powered code review system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pygithub>=2.1.1",
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "pylint>=3.0.0",
    "bandit>=1.7.5",
    "google-generativeai>=0.3.0",  # For Gemini
    "redis>=5.0.0",
]

[tool.uv]

package = true

dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
